# drt-tools

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
assorted-debian-utils/: CHANGELOG.md  Cargo.toml  README.md
assorted-debian-utils/src/: architectures.rs  archive.rs  autoremovals.rs  buildinfo.rs  cversion.rs  excuses.rs  lib.rs  package.rs  release.rs  utils.rs  version.rs  wb.rs
assorted-debian-utils/tests/: excuses.rs  releases.rs
assorted-debian-utils/tests/data/: Release-debian-bookworm  Release-debian-bullseye  Release-debian-forky  Release-debian-trixie  Release-debian-unstable  Release-ramacher.at-unstable
src/: binnmu_buildinfo.rs  cli.rs  config.rs  grep_excuses.rs  lib.rs  main.rs  nmu_eso.rs  nmu_list.rs  nmu_t64.rs  nmu_transition.rs  nmu_versionskew.rs  prepare_binnmus.rs  process_excuses.rs  process_unblocks.rs  source_packages.rs  udd_bugs.rs  usrmerged.rs  utils.rs
