[package]
name = "drt-tools"
description = "Tools for Debian Release Team work"
version = "0.2.18"
authors = ["Sebastian Ramacher <sebastian@ramacher.at>"]
repository = "https://github.com/sebastinas/drt-tools"
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.70"
readme = "README.md"
keywords = ["debian"]

[workspace]
members = ["assorted-debian-utils"]

[dependencies]
anyhow = "1"
assorted-debian-utils = { version = "0.6.0", path = "assorted-debian-utils" }
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }
clap-verbosity-flag = "2"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
httpdate = "1"
indicatif = "0.17"
itertools = "0.12"
log = "0.4"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.11", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
smartstring = "1"
smallvec = { version = "1", default-features = false, features = ["union"] }
stderrlog = "0.5"
tokio = { version = "1.13", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
voca_rs = "1.14.0"
xdg = "2.4"
xz2 = { version = "0.1", default-features = false }

[profile.release]
lto = true
