[package]
name = "drt-tools"
description = "Tools for Debian Release Team work"
version = "0.3.3"
authors = ["Sebastian Ramacher <sebastian@ramacher.at>"]
repository = "https://github.com/sebastinas/drt-tools"
license = "GPL-3.0-or-later"
edition = "2024"
rust-version = "1.85"
readme = "README.md"
keywords = ["debian"]

[workspace]
members = ["assorted-debian-utils"]

[dependencies]
anyhow = "1"
assorted-debian-utils = { version = "0.8.3", path = "assorted-debian-utils" }
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive", "unicode", "wrap_help"] }
clap-verbosity-flag = "3"
flate2 = { version = "1", default-features = false, features = ["zlib"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
httpdate = "1"
indicatif = "0.18"
itertools = "0.14"
log = "0.4"
openssh = { version = "0.11", features = ["native-mux"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
stderrlog = "0.6"
thiserror = "2"
tokio = { version = "1.21", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
voca_rs = "1.14"
xdg = "3.0"
xz2 = { version = "0.1", default-features = false }

[build-dependencies]
assorted-debian-utils = { version = "0.8", path = "assorted-debian-utils" }
clap = { version = "4", features = ["cargo", "derive"] }
clap_complete = "4.4"
clap_mangen = "0.2"
clap-verbosity-flag = "3"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
