[package]
name = "assorted-debian-utils"
description = "Collection of various utilities for Debian work"
version = "0.6.2"
authors = ["Sebastian Ramacher <sebastian@ramacher.at>"]
repository = "https://github.com/sebastinas/drt-tools"
edition = "2021"
rust-version = "1.60"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["debian"]
exclude = ["tests/excuses.rs", "tests/data/*.yaml"]

[dependencies]
chrono = { version = "0.4", features = ["serde"], default-features = false }
hex = { version = "0.4", features = ["std"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_yaml = "0.9"
rfc822-like = "0.2.1"
thiserror = { version = "1" }
smallvec = { version = "1", default-features = false, features = [
    "serde",
    "union",
] }

[features]
version-compare = []

[dev-dependencies]
spectral = { version = "0.6", default-features = false }
