[package]
name = "assorted-debian-utils"
description = "Collection of various utilities for Debian work"
version = "0.8.4"
authors = ["Sebastian Ramacher <sebastian@ramacher.at>"]
repository = "https://github.com/sebastinas/drt-tools"
edition = "2024"
rust-version = "1.90"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["debian"]
exclude = ["tests/excuses.rs", "tests/data/*.yaml"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
hex = { version = "0.4", features = ["std"], default-features = false }
itertools = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
rfc822-like = "0.2.1"
smallvec = { version = "1", default-features = false, features = [
    "serde",
    "union",
] }
thiserror = { workspace = true }
