[package]
name = "assorted-debian-utils"
description = "Collection of various utilities for Debian work"
version = "0.8.4"
authors.workspace = true
repository.workspace = true
license = "LGPL-3.0-or-later"
edition.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["debian"]
exclude = ["tests/excuses.rs", "tests/data/*.yaml"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
hex = { version = "0.4", features = ["std"], default-features = false }
itertools.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rfc822-like = "0.2.1"
smallvec = { version = "1", default-features = false, features = [
    "serde",
    "union",
] }
thiserror.workspace = true
